force-app/main/default/objects/EquipmentReturn__c/EquipmentReturn__c.object-meta.xml
<CustomObject>
    <label>장비반납</label>
    <nameField>
        <label>Equipment Return Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>