force-app/main/default/objects/EquipmentReturn__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Return</relationshipLabel>
    <relationshipName>Equipment_Return</relationshipName>
    <type>Lookup</type>
</CustomField>