force-app/main/default/objects/EquipmentReturn__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Equipment Return</relationshipLabel>
    <relationshipName>Equipment_Return</relationshipName>
    <type>Lookup</type>
</CustomField>