force-app/main/default/objects/EquipmentReturn__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipment Return</relationshipLabel>
    <relationshipName>Equipment_Return</relationshipName>
    <type>Lookup</type>
</CustomField>