force-app/main/default/objects/EquipmentReturn__c/fields/DestinationLocationId__c.field-meta.xml
<CustomField>
    <fullName>DestinationLocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Location Id</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Equipment Return</relationshipLabel>
    <relationshipName>Equipment_Return</relationshipName>
    <type>Lookup</type>
</CustomField>