force-app/main/default/objects/EquipmentReturn__c/fields/EquipmentReturnNumber__c.field-meta.xml
<CustomField>
    <fullName>EquipmentReturnNumber__c</fullName>
    <displayFormat>ER{YYYYMMDD}-{00000}</displayFormat>
    <label>Equipment Return Number</label>
    <type>AutoNumber</type>
</CustomField>