force-app/main/default/objects/EquipmentReturn__c/fields/ExpectedArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedArrivalDate__c</fullName>
    <label>Expected Arrival Date</label>
    <type>DateTime</type>
</CustomField>