force-app/main/default/objects/EquipmentReturn__c/fields/LifeCycleType__c.field-meta.xml
<CustomField>
    <fullName>LifeCycleType__c</fullName>
    <label>Life Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MANAGED</fullName>
            </value>
            <value>
                <fullName>UNMANAGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>