force-app/main/default/objects/EquipmentReturn__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Equipment Return (Location)</relationshipLabel>
    <relationshipName>Equipment_Return1</relationshipName>
    <type>Lookup</type>
</CustomField>