force-app/main/default/objects/EquipmentReturn__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request ID</label>
    <referenceTo>EquipmentRequest__c</referenceTo>
    <relationshipLabel>Equipment Return</relationshipLabel>
    <relationshipName>Equipment_Return</relationshipName>
    <type>Lookup</type>
</CustomField>