force-app/main/default/objects/EquipmentReturn__c/fields/ReturnedById__c.field-meta.xml
<CustomField>
    <fullName>ReturnedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Returned By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Equipment_Return</relationshipName>
    <type>Lookup</type>
</CustomField>