force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromCity__c.field-meta.xml
<CustomField>
    <fullName>ShipFromCity__c</fullName>
    <label>Ship From City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>