force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromCountry__c.field-meta.xml
<CustomField>
    <fullName>ShipFromCountry__c</fullName>
    <label>Ship From Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>