force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromLatitude__c.field-meta.xml
<CustomField>
    <fullName>ShipFromLatitude__c</fullName>
    <label>Ship From Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>