force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromLongitude__c.field-meta.xml
<CustomField>
    <fullName>ShipFromLongitude__c</fullName>
    <label>Ship From Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>