force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipFromPostalCode__c</fullName>
    <label>Ship From Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>