force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromState__c.field-meta.xml
<CustomField>
    <fullName>ShipFromState__c</fullName>
    <label>Ship From State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>