force-app/main/default/objects/EquipmentReturn__c/fields/ShipFromStreet__c.field-meta.xml
<CustomField>
    <fullName>ShipFromStreet__c</fullName>
    <label>Ship From Street</label>
    <type>TextArea</type>
</CustomField>