force-app/main/default/objects/EquipmentReturn__c/fields/ShipmentType__c.field-meta.xml
<CustomField>
    <fullName>ShipmentType__c</fullName>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard;Rush</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Next Business Day</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>